syntax = "proto3";

package golem.apidefinition;

import "golem/component/component_id.proto";
import "golem/rib/expr.proto";
import "golem/rib/rib_input.proto";
import "golem/rib/rib_byte_code.proto";
import "golem/rib/worker_functions_in_rib.proto";
import "golem/component/versioned_component_id.proto";
import "google/protobuf/timestamp.proto";

message ApiDefinition {
  ApiDefinitionId id = 1;
  string version = 2;
  oneof definition {
    HttpApiDefinition http = 3;
  }
  bool draft = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ApiDefinitionList {
  repeated ApiDefinition definitions = 1;
}

message HttpApiDefinition {
  repeated HttpRoute routes = 1;
}

message CompiledHttpApiDefinition {
  repeated CompiledHttpRoute routes = 1;
}

message ApiDefinitionId {
  string value = 1;
}

message HttpRoute {
  HttpMethod method = 1;
  string path = 2;
  GatewayBinding binding = 3;
}

message CompiledHttpRoute {
    HttpMethod method = 1;
    string path = 2;
    CompiledGatewayBinding binding = 3;
}

enum HttpMethod {
  GET = 0;
  CONNECT = 1;
  POST = 2;
  DELETE = 3;
  PUT = 4;
  PATCH = 5;
  OPTIONS = 6;
  TRACE = 7;
  HEAD = 8;
}

message GatewayBinding {
  // Optional field to keep backward compatibility
  optional golem.component.VersionedComponentId component = 1;
  optional golem.rib.Expr worker_name = 2;
  // Optional field to keep backward compatibility
  optional golem.rib.Expr response = 3;
  optional golem.rib.Expr idempotency_key = 4;

  // type discriminator to keep backward compatibility
  optional GatewayBindingType binding_type = 5;
  optional string allow_origin = 6;
  optional string allow_methods = 7;
  optional string allow_headers = 8;
  optional string expose_headers = 9;
  optional uint64 max_age = 10;
}


enum GatewayBindingType {
  DEFAULT = 0;
  CORS = 1;
}

message CompiledGatewayBinding {
  // Optional field to keep backward compatibility
  optional golem.component.VersionedComponentId component = 1;
  optional golem.rib.Expr worker_name = 2;
  optional golem.rib.RibByteCode compiled_worker_name_expr = 3;
  optional golem.rib.RibInputType worker_name_rib_input = 4;
  optional golem.rib.Expr response = 5;
  optional golem.rib.RibByteCode compiled_response_expr = 6;
  optional golem.rib.RibInputType response_rib_input = 7;
  optional golem.rib.Expr idempotency_key = 8;
  optional golem.rib.RibByteCode compiled_idempotency_key_expr = 9;
  optional golem.rib.RibInputType idempotency_key_rib_input = 10;
  optional golem.rib.WorkerFunctionsInRib worker_functions_in_response = 11;
  // type discriminator to keep backward compatibility
  optional GatewayBindingType binding_type = 12;
  optional string allow_origin = 13;
  optional string allow_methods = 14;
  optional string allow_headers = 15;
  optional string expose_headers = 16;
  optional uint64 max_age = 17;
}
